<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Registration" >
    <RelativeLayout
        android:id="@+id/layout_camera"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:padding="3px"
        android:background="@drawable/border_camera"
        android:layout_weight="8">

        <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"/>
        <ImageButton
            android:id="@+id/btnSwitchCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_stat_camera" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <EditText
            android:id="@+id/ID"
            style="@style/edittext_login"
            android:layout_marginLeft="@dimen/regist_edittext_margin_right"
            android:layout_marginRight="@dimen/regist_edittext_margin_right"
            android:layout_marginTop="@dimen/regist_edittext_margin_top"
            android:hint="@string/id"
            android:inputType="number"
            android:maxLength="4" />
        <!-- Name -->

        <EditText
            android:id="@+id/NameEmp"
            style="@style/edittext_login"
            android:layout_below="@+id/ID"
            android:layout_marginLeft="@dimen/regist_edittext_margin_right"
            android:layout_marginRight="@dimen/regist_edittext_margin_right"
            android:layout_marginTop="@dimen/regist_edittext_margin_top"
            android:hint="@string/name" />
        <!-- Phone -->

        <EditText
            android:id="@+id/Phone"
            style="@style/edittext_login"
            android:layout_below="@+id/NameEmp"
            android:layout_marginLeft="@dimen/regist_edittext_margin_right"
            android:layout_marginRight="@dimen/regist_edittext_margin_right"
            android:layout_marginTop="@dimen/regist_edittext_margin_top"
            android:hint="@string/phone"
            android:inputType="number" />
        <!-- Email -->

        <EditText
            android:id="@+id/Email"
            style="@style/edittext_login"
            android:layout_below="@+id/Phone"
            android:layout_marginLeft="@dimen/regist_edittext_margin_right"
            android:layout_marginRight="@dimen/regist_edittext_margin_right"
            android:layout_marginTop="@dimen/regist_edittext_margin_top"
            android:hint="@string/email" />
        <!-- Address -->

        <EditText
            android:id="@+id/Address"
            style="@style/edittext_login"
            android:layout_below="@+id/Email"
            android:layout_marginLeft="@dimen/regist_edittext_margin_right"
            android:layout_marginRight="@dimen/regist_edittext_margin_right"
            android:layout_marginTop="@dimen/regist_edittext_margin_top"
            android:hint="@string/address" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/button_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Address"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/submit" />
    </RelativeLayout>
</LinearLayout>