<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login" >

    <EditText
        android:id="@+id/UserName"
        style="@style/edittext_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/login_edittext_margin"
        android:layout_marginRight="@dimen/login_edittext_margin"
        android:layout_marginTop="21dp"
        android:layout_toRightOf="@+id/txtUserName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/UserName"
        android:layout_alignBottom="@+id/UserName"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/Password"
        style="@style/edittext_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/UserName"
      android:layout_marginLeft="@dimen/login_edittext_margin"
        android:layout_marginRight="@dimen/login_edittext_margin"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/txtPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Password"
        android:layout_alignTop="@+id/Password"
        android:layout_toLeftOf="@+id/UserName"
        android:text="@string/password" />

    <Button
        android:id="@+id/Login"
        style="@style/button_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:layout_marginBottom="12dp" />

</RelativeLayout>